# ai_detection

./: .deepsource.toml  .gitignore  README.md  pyproject.toml
images/: structure.vsdx
src/ai_detection/: main.py  test.py
src/ai_detection/classifier/: classify.py  fusion_classifer.py  huggingface_classifier.py  pytorch_classier.py  sklearn_classifier.py
src/ai_detection/classifier/multi_feature_model/: fusionBert.py  fusionBert_backup.py
src/ai_detection/config/: classify.yaml  data.yaml  lime.yaml  mongodb.yaml
src/ai_detection/data_loader/: data_load.py  data_process.py  everyai_dataset.py  filter.py  zh_stopwords.txt
src/ai_detection/explanation/: explain.py
src/ai_detection/fig/lime/random_forest_TfidfVectorizer_qa_legal_dataset_val/: text0.html  text100.html  text101.html  text102.html  text103.html  text107.html  text108.html  text11.html  text110.html  text111.html  text114.html  text115.html  text116.html  text117.html  text121.html  text122.html  text123.html  text125.html  text128.html  text129.html  text13.html  text130.html  text135.html  text136.html  text138.html  text141.html  text143.html  text145.html  text147.html  text149.html  text15.html  text153.html  text154.html  text155.html  text156.html  text157.html  text159.html  text161.html  text162.html  text163.html  (+51 more)
src/ai_detection/generator/: generate.py  huggingface_generate.py  openai_generate.py
src/ai_detection/utils/: everyai_path.py  load_args.py  load_config.py  proxy.py
src/everyai/: everyai_path.py  main.py  test.py
src/everyai/classfier/: classfier.py  classfy.py  classify.py  huggingface_classifier.py  sklearn_classifier.py
src/everyai/classfier/multi_feature/: model.py
src/everyai/classifier/: classify.py  fusion_classifer.py  huggingface_classifier.py  pytorch_classier.py  sklearn_classifier.py
src/everyai/classifier/multi_feature_model/: fusionBert.py  fusionBert_backup.py
src/everyai/config/: classfiy.yaml  classify.yaml  config.py  data.yaml  generate.yaml  generate_config.yaml  mongodb.yaml  topic.yaml
src/everyai/data/: human_ai_comparsion.csv  mental_health_cyn.csv  reddit_finance_43_250k.csv
src/everyai/data_loader/: data_load.py  dataprocess.py  everyai_dataset.py  filter.py  mongo_connection.py
src/everyai/explanation/: explain.py  lime.py
src/everyai/fig/human_ai_comparsion/human/: topic_freq.csv
src/everyai/fig/lime/SVM_TfidfVectorizer_human_ai_comparsion/: text0.html  text1.html  text10.html  text11.html  text12.html  text13.html  text14.html  text15.html  text16.html  text17.html  text18.html  text19.html  text2.html  text20.html  text21.html  text22.html  text23.html  text24.html  text25.html  text26.html  text27.html  text28.html  text29.html  text3.html  text30.html  text31.html  text32.html  text33.html  text34.html  text35.html  text36.html  text37.html  text38.html  text39.html  text4.html  (+24 more)
src/everyai/generator/: generate.py  huggingface_generate.py  openai_generate.py
src/everyai/generator/multi_feature/: demo.ipynb  model.py
src/everyai/model/: SVM_TfidfVectorizer_None.pkl  SVM_TfidfVectorizer_human_ai_comparsion.pkl
src/everyai/topic/: bertopic.py  my_bertopic.py
src/everyai/utils/: load_args.py  load_config.py
tests/: shap_text_visualization.html  test_data_load.py
(+462 files in other folders)
