[tool.poetry]
name = "everyai"
version = "0.1.0"
description = ""
authors = ["Wang Haowei <hw_wang@whu.edu.cn>"]
readme = "README.md"
packages = [{include = "everyai", from = "src"}]

[tool.poetry.dependencies]
python = "3.12.7"
openai = "^1.56.1"
transformers = ">=4.44.0"
pandas = "^2.2.3"
datasets = "^3.1.0"
pymongo = "^4.10.1"
torch = "^2.5.1"
torchvision = "^0.20.1"
torchaudio = "^2.5.1"
accelerate = ">=0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate = "everyai.main:generate"