[tool.poetry]
name = "ai_detection"
version = "0.1.0"
description = ""
authors = ["Wang Haowei <hw_wang@whu.edu.cn>"]
readme = "README.md"
packages = [{ include = "ai_detection", from = "src" }]

[tool.poetry.dependencies]
python = "3.12.2"
openai = "1.58.1"
transformers = "4.47.0"
pandas = "2.2.3"
datasets = "3.1.0"
pymongo = "4.10.1"
torch = "2.5.0"
torchvision = "0.20.0"
torchaudio = "2.5.0"
accelerate = "1.0.1"
huggingface-hub = "0.25.1"
sentencepiece = "0.2.0"
jinja2 = "3.1.4"
pydantic = "2.9.2"
timm = "1.0.9"
tiktoken = "0.7.0"
numpy = "==1.26.4"
sentence_transformers = "3.1.1"
gradio = "==4.44.1"
einops = "0.8.0"
pillow = "10.4.0"
sse-starlette = "2.1.3"
bitsandbytes = "0.43.3"
bertopic = "^0.16.4"
jieba = "0.42.1"
scikit-learn = "1.5.2"
xgboost = "2.1.3"
lime = "0.2.0.1"
shap = "0.46.0"
wandb = "^0.19.1"
evaluate = "^0.4.3"
modelscope = "^1.21.1"
spacy = "^3.8.3"
vadersentiment = "^3.3.2"
lightning = "^2.5.0.post0"
transformers-stream-generator = "^0.0.5"

[tool.poetry.group.dev.dependencies]
debugpy = "^1.8.11"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
generate = "ai_detection.main:generate"
topic = "ai_detection.main:topic"
classify = "ai_detection.main:classify"
every = "ai_detection.main:main"

[[tool.poetry.source]]
name = "nvidia"
url = "https://pypi.nvidia.com"
priority = "supplemental"
